plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.devkor.ifive'
version = '0.0.1-SNAPSHOT'
description = 'Spring Boot backend server for Nadab project'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
    set('testcontainersVersion', "2.0.3")
    set('springAiVersion', "1.1.2")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    runtimeOnly 'org.postgresql:postgresql'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Swagger
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13"

    // Flyway
    implementation 'org.flywaydb:flyway-core:11.7.1'
    implementation 'org.flywaydb:flyway-database-postgresql:11.7.1'

    // JWT
    implementation 'com.auth0:java-jwt:4.5.0'

    // WebClient (OAuth2 직접 구현용)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // AWS S3
    implementation platform('software.amazon.awssdk:bom:2.39.4')
    implementation 'software.amazon.awssdk:s3'

    // BadWordFiltering 라이브러리
    implementation 'io.github.vaneproject:badwordfiltering:1.0.0'
    implementation 'com.modernmt.text:profanity-filter:1.0.1'

    // Spring Mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Spring AI - OpenAI
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'

    // testcontainers
    testImplementation 'org.testcontainers:postgresql'
    testImplementation "org.testcontainers:junit-jupiter"

    // Anthropic (Claude)
    implementation 'org.springframework.ai:spring-ai-starter-model-anthropic'

    // Gemini
    implementation 'org.springframework.ai:spring-ai-starter-model-google-genai'

    // Hypersistence Utils
    implementation "io.hypersistence:hypersistence-utils-hibernate-63:3.7.6"

    // Thymeleaf (통계 페이지용)
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // Firebase Admin SDK
    implementation 'com.google.firebase:firebase-admin:9.7.1'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
    }
}

tasks.named('test') {
	useJUnitPlatform()
}
